# file-drop

./: README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: _config.yml  index.html
scripts/: publish.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  network.rs
