[package]
name = "krill-file-drop"
version = "0.1.1"
description = "Drop a file to a friend over the internet"
authors = ["Filip"]
edition = "2021"
rust-version = "1.89"
license = "MIT"

[lib]
name = "krill_file_drop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
krill-desktop-core = { git = "https://github.com/krill-software/desktop-core", tag = "v0.2.0" }
iroh = "0.98"
anyhow = "1"
postcard = { version = "1", features = ["alloc"] }
data-encoding = "2"
tokio = { version = "1", features = ["sync", "io-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
